...
          ],
        ),
        const SizedBox(height: 8),
        _buildInputField(
          controller: _descriptionController,
          focusNode: _descriptionFocusNode,
          label: 'Item Description',
          onChanged: (val) => provider.updateItemDescription(0, val),
          maxLines: 2,
          updateOnType: false,
          inputFormatters: [
            PrefixTextInputFormatter(InvoiceProvider.itemPrefix),
          ],
...
            const SizedBox(width: 8),
            Expanded(
              flex: 2,
              child: _buildInputField(
                controller: _totalAmountController,
                focusNode: _totalAmountFocusNode,
                label: 'Total Amount',
                onChanged: (val) {
                  final doubleValue =
                      double.tryParse(val.replaceAll(',', '')) ?? 0.0;
                  provider.updateItemPrice(0, doubleValue);
                },
                keyboardType: const TextInputType.numberWithOptions(
...
                            strokeWidth: 2,
                            color: Colors.white,
                          ),
                        )
                      : const Icon(Icons.picture_as_pdf),
                  label: Text(
                    provider.isGenerating ? 'Generating...' : 'Generate PDF',
                  ),
                  style: ElevatedButton.styleFrom(
                    padding: const EdgeInsets.symmetric(vertical: 16),
                    elevation: 0,
                    backgroundColor: Theme.of(context).colorScheme.primary,
                    foregroundColor: Theme.of(context).colorScheme.onPrimary,
...
      print(st);
      print('============================');
      if (!context.mounted) return;

      ScaffoldMessenger.of(context).showSnackBar(
        SnackBar(
          content: Text('Error generating PDF: $e'),
          backgroundColor: Colors.red,
        ),
      );
    }
  }

...
